<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvConverterTitle"
        android:text="@string/label_temp_converter_app"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilOriginalValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_input_initial_value"
        app:layout_constraintTop_toBottomOf="@id/tvConverterTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtOriginalValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerInitialUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/unit_name"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tilOriginalValue"/>

    <TextView
        android:id="@+id/tvEqual"
        android:text="@string/label_to"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerInitialUnit"/>

    <Spinner
        android:id="@+id/spinnerCalculateUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/unit_name"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvEqual"/>

    <Button
        android:id="@+id/btnCalculate"
        android:text="@string/label_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/spinnerCalculateUnit"/>

    <TextView
        android:id="@+id/tvLabelConvertingResult"
        android:text="@string/label_result"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnCalculate"/>

    <TextView
        android:id="@+id/tvConvertingResult"
        android:text="@string/label_zero"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelConvertingResult"/>

</androidx.constraintlayout.widget.ConstraintLayout>